# auto-grade

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  codecov.yaml  docker-compose.yaml  main.py  pyproject.toml  sonar-project.properties
.github/: dependabot.yaml
.github/workflows/: code-quality.yaml  dependency-review.yaml.disabled  security.yaml  test.yaml
config/: config.py  config.toml  models.py
src/controller/api/: api.py  models.py
src/controller/web/: web.py
src/repository/cache/: client.py  factory.py  redis.py
src/repository/db/: base.py  client.py  factory.py  models.py  redis.py
src/repository/db/ferretdb/: repository.py
src/repository/vdb/: client.py  factory.py  redis.py
src/service/: assignment_service.py  deliverable_service.py  health_service.py
src/view/: assignment_detail.html  index.html
src/view/templates/: assignment_cards.html  healthcheck.html  navbar.html
static/css/: styles.css
static/js/: htmx-class-tools-v2.0.2.min.js
tests/e2e/: test_assignment_e2e.py  test_assignment_management.py  test_deliverable_e2e.py  test_deliverable_submission.py  test_helpers.py  test_web_e2e.py  test_web_navigation.py
tests/integration/: test_api_integration.py  test_assignment_api_integration.py  test_assignment_repository_integration.py  test_config_integration.py  test_deliverable_api_integration.py  test_repository_integration.py
tests/integration/config/: test_configuration_loading.py
tests/integration/controller/api/: test_assignment_workflow.py  test_deliverable_workflow.py  test_health_check.py
tests/integration/repository/: test_repository_operations.py
tests/integration/repository/ferretdb/: test_ferretdb_integration.py
tests/unit/: test_api_coverage_unit.py  test_api_missing_coverage_unit.py  test_api_unit.py  test_assignment_service_unit.py  test_config_unit.py  test_coverage_gaps_unit.py  test_deliverable_api.py  test_deliverable_api_unit.py  test_deliverable_repository_models_unit.py  test_deliverable_service.py  test_deliverable_service_coverage_unit.py  test_deliverable_service_unit.py  test_ferretdb_assignment_unit.py  test_ferretdb_deliverable_unit.py  test_repository_models_unit.py  test_repository_unit.py  test_service_unit.py
tests/unit/config/: test_configuration.py
tests/unit/controller/api/: test_assignment_endpoints.py  test_deliverable_endpoints.py  test_health_endpoint.py  test_helper_functions.py
tests/unit/repository/: test_repository_factory.py
tests/unit/repository/ferretdb/: test_assignment_operations.py  test_deliverable_operations.py  test_document_operations.py
tests/unit/repository/models/: test_assignment_model.py  test_base_models.py  test_deliverable_model.py
tests/unit/service/: test_assignment_service.py  test_deliverable_service.py  test_health_service.py
